# crashpad-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  CROSS_COMPILE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPING.md  LICENSE  Makefile  OVERVIEW.md  PRD.md  PREBUILT_PACKAGE.md  README.md  TASKS.md  handler-arguments-api-plan.md  justfile  release-please-config.json  t002-plan.md
.agent-checklists/: architect-thor-T-006.md
.cargo/: config.toml
.config/: nextest.toml
.github/actions/release-prebuilt-archive/: action.yml
.github/scripts/: parse-nextest-json.sh
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  code-quality.yml  lint.yml  manual-release-prebuilt.yml  release-tag.yml  release.yml  test-android.yml  test-ios.yml  test-linux.yml  test-macos.yml  test-prebuilt.yml  test-report.yml  test-windows.yml  update-deps.yml
crashpad/: Cargo.toml  build.rs
crashpad-build/: Cargo.toml
crashpad-build/src/: config.rs  lib.rs  phases.rs
crashpad-handler-bundler/: Cargo.toml
crashpad-handler-bundler/src/: lib.rs
crashpad-sys/: Cargo.toml  build.rs  crashpad_wrapper.cc  wrapper.h
crashpad-sys/src/: build_support.rs
crashpad/examples/: basic.rs  crash_test.rs  crashpad_test_cli.rs  ios_simulator_test.rs  run_ios_simulator_test.sh
crashpad/package/: README.md
crashpad/src/: client.rs  config.rs  lib.rs
crashpad/tests/: handler_fallback_test.rs  integration_test.rs  macos_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: build.rs  clean.rs  deps.rs  dist.rs  mod.rs  prebuilt.rs  symlink.rs  test.rs  tools.rs
xtask/src/utils/: mod.rs  workspace.rs
