[workspace]
members = ["crashpad-sys", "crashpad", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["bahamoth <bahamoth@naver.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bahamoth/crashpad-rs"
rust-version = "1.70"

[workspace.dependencies]
# Common dependencies
thiserror = "1.0"