[package]
name = "crashpad-sys"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Low-level FFI bindings to Google Crashpad"
links = "crashpad"

[dependencies]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
chrono = "0.4"
dirs = "5.0"
serde_json = "1.0"
shellexpand = "3.1"
ureq = "2.9"
zip = "0.6"

[features]
default = []
# Enable building with depot_tools (required for first build)
depot-tools = []