[package]
name = "crashpad-rs-sys"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Low-level FFI bindings to Google Crashpad - A crash-reporting system"
homepage = { workspace = true }
documentation = "https://docs.rs/crashpad-rs-sys"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
links = "crashpad"

[dependencies]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
chrono = "0.4"
dirs = "5.0"
serde_json = "1.0"
shellexpand = "3.1"
ureq = "2.9"
zip = "0.6"

[features]
default = []

[package.metadata.docs.rs]
# Don't build or show dependencies' documentation
no-deps = true
# Build only for the default target to save resources
targets = ["x86_64-unknown-linux-gnu"]
