[package]
name = "crashpad"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Safe Rust bindings to Google Crashpad"

[dependencies]
crashpad-sys = { path = "../crashpad-sys", version = "0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []