[package]
name = "crashpad"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Safe Rust bindings to Google Crashpad - A crash-reporting system"
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
crashpad-sys = { path = "../crashpad-sys", version = "0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
libc = "0.2"
minidump = "0.26"  # For parsing and verifying crash dumps
minidump-processor = "0.26"  # For analyzing crash dumps with annotations
