[package]
name = "crashpad-rs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Safe Rust bindings to Google Crashpad - A crash-reporting system"
homepage = { workspace = true }
documentation = "https://docs.rs/crashpad-rs"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
crashpad-rs-sys = { path = "../crashpad-sys", version = "0.2.1" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
libc = "0.2"
minidump = "0.26"  # For parsing and verifying crash dumps
minidump-processor = "0.26"  # For analyzing crash dumps with annotations

[package.metadata.docs.rs]
# Don't build or show dependencies' documentation
no-deps = true
# Build only for the default target to save resources
targets = ["x86_64-unknown-linux-gnu"]
